--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -78,3 +78,9 @@
     transition: transform .2s ease-out;
   }
   
+.sidebar-sticky {
+  height: 100%;
+  padding-top: 5%;
+  position: absolute;
+}
+  
