--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -50,3 +50,15 @@ pre {
     border-right-width: calc(100vw + 100vh);
   }
 }
+
+// Image centering
+
+.text-align-center {
+  text-align: center;
+}
+
+img.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
