--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -50,7 +50,7 @@
   .spread-btn{
     background: none;
     border: none;
-    color: white;
+    color: rgb(0, 0, 0);
     cursor: pointer;
     text-align: right;
     width: 100%;
